--- a/main.html
+++ b/main.html
@@ -10,6 +10,36 @@
 <body>
     <!-- add table here -->
 
+	<table class="table">
+		<thead>
+			<tr>
+				<th>Name</th>
+				<th>Kills</th>
+				<th>saved</th>
+				<th>deaths</th>
+				<th>revivies</th>
+				<th>win</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>Hackerman</td>
+				<td>10</td>
+				<td>0</td>
+				<td>1</td>
+				<td>0</td>
+				<td>0</td>
+			</tr>
+			<tr>
+				<td>Hackerman</td>
+				<td>10</td>
+				<td>0</td>
+				<td>1</td>
+				<td>0</td>
+				<td>0</td>
+			</tr>
+		</tbody>
+	</table>
         
 </body>
 </html>
